Async database and image loading