@@ -1,5 +1,6 @@
 package com.example.eksamensprojekt.controllers;
 
+import com.example.eksamensprojekt.AsyncTask;
 import com.example.eksamensprojekt.SceneManeger;
 import com.example.eksamensprojekt.database.DAO;
 import com.example.eksamensprojekt.database.DAOImplementation;
@@ -17,6 +18,7 @@ import javafx.scene.input.MouseEvent;
 import java.awt.*;
 import java.io.IOException;
 import java.net.URI;
+import java.sql.SQLException;
 import java.util.concurrent.ExecutionException;
 
 public class UndervisningController
@@ -53,7 +55,7 @@ public class UndervisningController
     SceneManeger sceneManeger = new SceneManeger();
 
     // Opretter et DAO objekt - bruges til kommunikation med databasen
-    DAO dao = new DAOImplementation();
+    DAO dao = DAOImplementation.getInstance();
 
     // Kører automatisk når FXML siden åbnes
     public void initialize()
@@ -114,28 +116,36 @@ public class UndervisningController
         }
 
         // Henter kontaktoplysninger til bundlinjen fra databasen
-        try {
-            // Henter data fra databasen som et OmOs objekt og ligger det i omOsListe
-            dao.hentOmOs(omOsListe);
+        AsyncTask.run(
+                () -> {
+                    try {
+                        return dao.hentOmOs();
+                    } catch (SQLException e) {
+                        throw new RuntimeException(e);
+                    }
+                },
+                result -> {
+                    // Set data
+                    omOsListe.setAll(result);
 
-            // Henter OmOs objektet fra listen
-            OmOs omOs = omOsListe.get(0);
+                    // Henter OmOs objektet fra listen
+                    OmOs omOs = omOsListe.getFirst();
 
-            // Sætter data fra objektet ind i de forskellige labels
-            adresse.setText(omOs.getAdresse());
-            telefon.setText(omOs.getTelefonnummer());
-            email.setText(omOs.getEmail());
-            åbningstider.setText(omOs.getÅbningstider());
+                    // Sætter data fra OmOs objektet ind i de forskellige labels
+                    adresse.setText(omOs.getAdresse());
+                    telefon.setText(omOs.getTelefonnummer());
+                    email.setText(omOs.getEmail());
+                    åbningstider.setText(omOs.getÅbningstider());
+                },
+                error -> {
+                    System.out.println("Kunne ikke hente Om Os fra databasen");
+                    error.printStackTrace();
 
-        } catch (Exception e) {
-            // Udskriver fejlen i konsollen
-            System.out.println("Kunne ikke hente Om Os fra databasen");
-            e.printStackTrace();
-
-            // Giver brugeren besked om fejlen
-            Alert alert = new Alert(Alert.AlertType.ERROR, "Kunne ikke hente Om Os fra databasen");
-            alert.show();
-        }
+                    // Giver brugeren besked om fejlen
+                    Alert alert = new Alert(Alert.AlertType.ERROR, "Kunne ikke hente Om Os fra databasen");
+                    alert.show();
+                }
+        );
     }
 
     // Metode til at brugeren kan åbne et Undervisningsmateriale/PDF ved at dobbelt-klikke på det
